--- a/CAPSTONE_TEAM01_2024/Views/Statistics/StatisticsClassByMajor.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Statistics/StatisticsClassByMajor.cshtml
@@ -55,35 +55,41 @@
                     <!-- ComboBox thiết kế -->
                     <div class="form-group">
                         <label for="FromYearFilter" style="font-size: 14px; color: #555;">Từ Khóa:</label>
-                        <select
-                            id="FromYearFilter"
-                            class=" form-select-lg"
-                            onchange="filterTable()" required
-                            oninvalid="setCustomValidity('Vui lòng chọn dữ liệu ')">
-                            <option selected="">Lựa chọn Khóa</option>
+                        <select id="FromYearFilter" class="form-select-lg" onchange="filterTable()" required>
+                            <option value="">Lựa chọn Khóa</option>
                             @foreach (var term in ViewBag.AllTerms as List<string>)
                             {
                                 var years = term.Split('-');
                                 var startYear = int.Parse(years[0]);
                                 var endYear = int.Parse(years[1]);
                                 var khóa = startYear - 1994;
-                                <option value="@term">@($"K{khóa}")</option>
+                                if (ViewBag.SelectedFromYear == term)
+                                {
+                                    <option value="@term" selected>@($"K{khóa}")</option>
+                                }
+                                else
+                                {
+                                    <option value="@term">@($"K{khóa}")</option>
+                                }
                             }
                         </select>
                         <label for="ToYearFilter" style="font-size: 14px; color: #555;">Đến Khóa:</label>
-                        <select
-                            id="ToYearFilter"
-                            class=" form-select-lg"
-                            onchange="filterTable()"
-                        >
-                            <option selected="">Lựa chọn Khóa</option>
+                        <select id="ToYearFilter" class="form-select-lg" onchange="filterTable()">
+                            <option value="">Lựa chọn Khóa</option>
                             @foreach (var term in ViewBag.AllTerms as List<string>)
                             {
                                 var years = term.Split('-');
                                 var startYear = int.Parse(years[0]);
                                 var endYear = int.Parse(years[1]);
                                 var khóa = startYear - 1994;
-                                <option value="@term">@($"K{khóa}")</option>
+                                if (ViewBag.SelectedToYear == term)
+                                {
+                                    <option value="@term" selected>@($"K{khóa}")</option>
+                                }
+                                else
+                                {
+                                    <option value="@term">@($"K{khóa}")</option>
+                                }
                             }
                         </select>
                         <button
