--- a/CAPSTONE_TEAM01_2024/Views/Announcement/AnnouncementList.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Announcement/AnnouncementList.cshtml
@@ -5,7 +5,7 @@ ViewData["Title"] = "Announcements";
 var rolesString = HttpContextAccessor.HttpContext.Session.GetString("Roles");
 var roles = rolesString?.Split(',') ?? new string[0];
 bool isNotAdvitors = !roles.Contains("Cố Vấn");
-
+var counter = (Model.PageIndex - 1) * Model.PageSize;
 }
 <div class="content-wrapper" style="min-height: 912.2px;">
 	<!-- Content Header (Page header) -->
@@ -76,39 +76,40 @@ bool isNotAdvitors = !roles.Contains("Cố Vấn");
 							</tr>
 						</thead>
 						<tbody id="data-table">
-							@foreach (var announcement in Model)
-							{
+						@foreach (var announcement in Model)
+						{
+							counter++;
 							<tr>
-								<td class="text-center">@announcement.Id</td>
-								<td class ="text-center">@announcement.Detail</td>
+								<td class="text-center">@counter</td>
+								<td class="text-center">@announcement.Detail</td>
 								<td class="text-center">@announcement.StartTime.ToString("dd-MM-yyyy")</td>
 								<td class="text-center">@announcement.EndTime.ToString("dd-MM-yyyy")</td>
 								<td class="text-center">@announcement.Type</td>
 								<td class="text-center">
 									@if (isNotAdvitors)
-									{	
-									<button type="button" class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#EditAnnouncementModal"
-											data-id="@announcement.Id"
-											data-detail="@announcement.Detail"
-											data-starttime="@announcement.StartTime.ToString("yyyy-MM-dd")"
-											data-endtime="@announcement.EndTime.ToString("yyyy-MM-dd")"
-											data-type="@announcement.Type"
-											onclick="editAnnouncement(this)">
-										<i class="fa-solid fa-pen-to-square custom-icon"></i> 
-									</button>
-									<button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#DeleteAnnouncementModal"
-											data-id="@announcement.Id"
-											onclick="deleteAnnouncement(this)">
-										<i class="fa-solid fa-trash custom-icon"></i> 
-									</button>
+									{
+										<button type="button" class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#EditAnnouncementModal"
+										        data-id="@counter"
+										        data-detail="@announcement.Detail"
+										        data-starttime="@announcement.StartTime.ToString("yyyy-MM-dd")"
+										        data-endtime="@announcement.EndTime.ToString("yyyy-MM-dd")"
+										        data-type="@announcement.Type"
+										        onclick="editAnnouncement(this)">
+											<i class="fa-solid fa-pen-to-square custom-icon"></i>
+										</button>
+										<button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#DeleteAnnouncementModal"
+										        data-id="@announcement.Id"
+										        onclick="deleteAnnouncement(this)">
+											<i class="fa-solid fa-trash custom-icon"></i>
+										</button>
 									}
 
 								</td>
 							</tr>
-							}
-							<tr id="noresults" style="display: none;">
-								<td colspan="6" class="text-center">Không tìm thấy nội dung</td>
-							</tr>
+						}
+						<tr id="noresults" style="display: none;">
+							<td colspan="6" class="text-center">Không tìm thấy nội dung</td>
+						</tr>
 						</tbody>
 					</table>
 					<nav aria-label="Page navigation" style="float:right;">
