--- a/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SchoolYear.cshtml
@@ -227,11 +227,11 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="DeletePeriodModalLabel">Xóa Niên Khóa</h5>
+                <h5 class="modal-title" id="DeletePeriodModalLabel">Xóa Năm Học</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>Bạn có chắc chắn muốn xóa niên khóa này không?</p>
+                <p>Khi xóa sẽ mất toàn bộ Kế Hoạch và Báo Cáo của năm học này.Bạn có chắc chắn muốn xóa năm học này không?</p>
                 <form id="deletePeriodForm" asp-action="DeletePeriod" method="post">
                     <input type="hidden" id="DeletePeriodId" name="PeriodId" />
                     <div class="modal-footer">
